@@ -1336,7 +1336,7 @@
 //-- SC_BODYPAINT
 2289,0,1000,2000,0,5000:7000:9000:11000:13000,5000
 //-- SC_INVISIBILITY
-2290,2000,1000,300000,0,180000,0
+2290,2000,1000,300000,0,20000,0
 //-- SC_DEADLYINFECT
 2291,0,1000,2000,0,60000,0
 //-- SC_ENERVATION
