@@ -31,8 +31,8 @@
 // 20090603 - 2009-06-03aRagexeRE+ - 0x7d7, 0x7d8, 0x7d9, 0x7da
 // 20090617 - 2009-06-17aRagexeRE+ - 0x7d9
 // 20090922 - 2009-09-22aRagexeRE+ - 0x7e5, 0x7e7, 0x7e8, 0x7e9
-// 20091103 - 2009-11-03aRagexeRE+ - 0x7fb
-// 20100105 - 2010-01-05aRagexeRE+ - 0x801
+// 20091103 - 2009-11-03aRagexeRE+ - 0x7f7, 0x7f8, 0x7f9, 0x7fb
+// 20100105 - 2010-01-05aRagexeRE+ - 0x800, 0x801
 #ifndef PACKETVER
 	//#define PACKETVER	20081126
 	#define PACKETVER 20100105
